<resources>
    <string name="app_name">Tech</string>
    <string name="name">Name:</string>
    <string name="user_name">User Name:</string>
    <string name="email">email:</string>
    <string name="address">Address</string>
    <string name="street_name">Street Name:</string>
    <string name="suite">Suite:</string>
    <string name="city">City:</string>
    <string name="zipcode">Zipcode:</string>
    <string name="company">Company:</string>
    <string name="phone">phone:</string>
    <string name="users_list">Users List</string>
</resources>
